objects/GCR_Content_Document_Detail_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Add_Approvers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Add Approvers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required_Reason__c</fullName>
        <label>Approval Required Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Counter__c</fullName>
        <label>Approval Submission Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected_Date__c</fullName>
        <label>Approved/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GCR_Content_Document_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCR Content Document Detail</label>
        <referenceTo>GCR_Content_Document_Detail__c</referenceTo>
        <relationshipLabel>GCR Content Document Detail Approvals</relationshipLabel>
        <relationshipName>GCR_Content_Document_Detail_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCR_Id__c</fullName>
        <formula>GCR_Content_Document_Detail__r.GCR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCR Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR__c</fullName>
        <formula>GCR_Content_Document_Detail__r.GCR__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <label>GCR Content Document Detail Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>GCR__c</columns>
        <columns>GCR_Content_Document_Detail__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Maria</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Pending</value>
        </filters>
        <label>Maria</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>GCR__c</columns>
        <columns>GCR_Content_Document_Detail__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR__c</field>
            <operation>equals</operation>
            <value>Legal Request -061343</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dan_Best_NA_GCR_Content_Document_Detail_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Dan Best - NA</label>
        <queue>Dan_Best_NA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Scott_Menzel_NA_GCR_Content_Document_Detail_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Cleta Milinazzo NA</label>
        <queue>Scott_Menzel_NA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GCRA-{00000}</displayFormat>
        <label>GCR Content Document Detail Approval Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCR Content Document Detail Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>